--- a/style.css
+++ b/style.css
@@ -1,33 +1,61 @@
-/* Page Grid */
-#page-grid {
-    display: grid;
-    grid-template-columns: auto;
-    grid-template-rows: 0.5fr 2fr;
-    grid-template-areas:
-    "header"
-    "sketch";
+:root {
+    --col: 16;
+    --row: 16;
 }
-
-#header {
-    grid-area: header;
+body {
+    font-family: 'Shadows Into Light', cursive;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-
+button {
+    border-radius: 5px;
+    padding: 10px;
+    text-align: center;
+    color: black;
+    background-color: lightgrey;
+    font-weight: bold;
+}
+.container {
+    border-radius: 10px;
+    width: 800px;
+    height: 850px;
+    background-color: red;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+#header {
+    color: white;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    font-weight: 900;
+}
+.menu-buttons {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    justify-content: center;
+    padding: 30px;
+}
 /* Sketch Grid */
 #sketch-grid {
-    grid-area: sketch;
-    margin-right: 100px;
-    margin-left: 100px;
+    flex: 1;
     display: grid;
-    grid-template-columns: repeat(16, 1fr);
-    grid-template-rows: repeat(16, 1fr);
+    grid-template-columns: repeat(var(--col), 1fr);
+    grid-template-rows: repeat(var(--row), 1fr);
+    background-color: white;
 }
 .grid-cell {
-    padding: 1em;
     border: 1px solid black;
 }
 .hover-active {
-    background-color: lightgrey;
+    background-color: gray;
+}
+
+#sketch-container {
+    width: 700px;
+    height: 700px;
+    display: flex;
 }
